--- a/dev/scss/sections/_preloader.scss
+++ b/dev/scss/sections/_preloader.scss
@@ -1,4 +1,4 @@
-#preloader-container{
+/* #preloader-container{
     position: absolute;
     height: 100vh;
     width: 100%;
@@ -17,8 +17,23 @@
             boder: 1px solid red;
         }
     }
-}
+} */
+#project-container{
 
+    position:absolute;
+    height: 100vh;
+    width: 100%;
+    div{
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+
+    svg{
+        
+    }
+}
 .gs-dev-tools{
     z-index: 550;
 }
